--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/react": "^18.2.2",
     "@types/react-dom": "^18.2.2",
     "@vitejs/plugin-react": "^4.2.0",
@@ -22,7 +24,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^5.1.0",
-    "@tailwindcss/vite": "^4.0.0"
+    "vite": "^5.1.0"
   }
 }
